<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="16dp">

    <Button
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/camera" />

    <Button
        android:id="@+id/gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/gallery" />

    <android.support.v7.widget.CardView
        android:id="@+id/container_message"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        card_view:cardElevation="8dp"
        card_view:cardUseCompatPadding="true">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/image_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            fresco:actualImageScaleType="centerCrop" />

        <ImageButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?selectableItemBackground"
            android:padding="24dp"
            app:srcCompat="@drawable/ic_file_upload_black_24dp" />

    </android.support.v7.widget.CardView>

</LinearLayout>
